<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:key="@string/pref_location_key"
        android:singleLine="true"
        android:title="@string/pref_location_title" />

    <ListPreference
        android:defaultValue="@string/pref_unit_default"
        android:entries="@array/pref_unit_entries"
        android:entryValues="@array/pref_unit_options"
        android:key="@string/pref_unit_key"
        android:title="@string/pref_unit_title" />

    <CheckBoxPreference
        android:defaultValue="@bool/pref_notifications_default"
        android:key="@string/pref_notifications_key"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:title="@string/pref_notifications_label" />

</PreferenceScreen>